# snap-pari

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  config.h  config.h.in  configure  configure.ac  mkinstalldirs
paper/: snap.ps  snap.tex
snap_data/: ClosedManifolds  closed.fields  closed_census_algebras  cusped.fields  cusped_census_fields  eta_fudges  sample_session  snap_help  trn.m.txt  trs5  trs6  trs7  tube_help
snap_data/link_data/: hyperbolic_data_04a  hyperbolic_data_05a  hyperbolic_data_06a  hyperbolic_data_06n  hyperbolic_data_07a  hyperbolic_data_07n  hyperbolic_data_08a  hyperbolic_data_08n  hyperbolic_data_09a  hyperbolic_data_09n  hyperbolic_data_10a  hyperbolic_data_10n  hyperbolic_data_11a  hyperbolic_data_11n  hyperbolic_data_12a  hyperbolic_data_12n  hyperbolic_data_13a  hyperbolic_data_13n  hyperbolic_data_14a
snap_data/manifolds/: L104001  L105002  L106001  L106002  L106003  L107002  L107003  L107004  L107005  L107006  L107007  L108001  L108002  L108003  L108004  L108005  L108006  L108007  L108008  L108009  L108010  L108011  L108012  L108013  L108014  L108015  L108016  L108017  L108018  L108019  L108020  L108021  L109001  L109002  L109003  L109004  L109005  L109006  L109007  L109008  (+1208 more)
src/: Makefile  Makefile.am  Makefile.in
src/pariwrap/: Makefile  Makefile.am  Makefile.in  example.cc  inlines.hh  make_inlines  pari_oldnames.hh  pariclass.hh  pariwrap.cc  pariwrap.hh  warn.hh
src/snap/: Makefile  Makefile.am  Makefile.in  O31_GEN.c  O31_GEN.h  O31_line.cc  O31_line.hh  O31_pari.hh  R_matrix.hh  R_poly.cc  R_poly.hh  R_vector.hh  VS.cc  VS.hh  adaptive_curve.hh  alg_group.cc  alg_group.hh  algebraic.cc  algebraic.hh  bbox.cc  bbox.hh  closed_geodesics.cc  closed_geodesics.hh  color.cc  color.hh  commens.cc  commens.hh  compile  complex_lll.cc  complex_lll.hh  connected_faces.cc  connected_faces.hh  dd_tiling.cc  dd_tiling.hh  dirichlet.cc  dirichlet.hh  drill_Dirichlet.cc  drill_Dirichlet.hh  env_A.cc  env_A.hh  (+86 more)
src/snappea/: Alg_matrices.cc  Alg_matrices.h  Dehn_coefficients.cc  Dirichlet.cc  Dirichlet.h  Dirichlet2D.cc  Dirichlet2D.h  Dirichlet2D_construction.cc  Dirichlet2D_extras.cc  Dirichlet2D_prototypes.h  Dirichlet_basepoint.cc  Dirichlet_basepoint2D.cc  Dirichlet_construction.cc  Dirichlet_extras.cc  Dirichlet_precision.cc  Dirichlet_precision2D.cc  FGWord.cc  FGWord.h  Makefile  Makefile.am  Makefile.in  Moebius_transformations.cc  Moebius_transformations.h  O31.cc  O31.h  SL2RMatrix.cc  SL2RMatrix.h  SnapPea.h  abelian_group.cc  barycentric_subdivision.cc  canonize.cc  canonize_part_1.cc  canonize_part_2.cc  canonize_result.cc  change_peripheral_curves.cc  chern_simons.cc  choose_generators.cc  close_cusps.cc  complex.cc  complex.h  (+96 more)
src/tubes/: Makefile  Makefile.am  Makefile.in  README  missing  tube_prog.cc  warn.cc  warn.hh
